# arm-cortex-m0-core

./: CMakeLists.txt  README.md
.github/workflows/: codeql.yml
include/arm-cortex-m0-core/: bit_utils.hpp  exceptions.hpp  nvic.hpp  scb.hpp  special_regs.hpp  systick.hpp
test/: codeql_stub.cpp
